# Magpie

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  V1.md  docker-compose.yml
server/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
server/alembic/versions/: 11be6cf6f798_phase_7_ai_suggested_category.py  a1b2c3d4e5f6_household_sharing.py  a1d4c7e2b905_one_bill_per_transaction.py  a2f9d3c1e8b7_import_batches_user_scope.py  b1cebc7ccf25_phase_4_ingest_events_raw_payload_.py  b2c3d4e5f6a7_household_member_status.py  b4e1c7a9f2d3_subscription_mutes.py  b72a5f74739e_phase_5_rules_scoping_and_transaction_.py  c4e17a9b2d38_seed_shared_categories.py  c9d2e4f7a1b8_goals.py  d5b8e1a4c96f_merchant_tags.py  d5f2a1b3c4e6_alert_latches.py  dc0b90fcfb82_phase_1_users_accounts_transactions_.py  e7c1a9d4f0b2_budget_user_scope.py  f3b8c2e9a1d7_transaction_splits.py
server/app/: config.py  database.py  limiter.py  main.py  security.py  time_util.py
server/app/imports/: csv_parser.py  institution_mappings.py  pending_match.py
server/app/ingest/: imap_client.py  parsers.py  poller.py
server/app/ledger/: balances.py  classify.py  rollups.py
server/app/models/: __init__.py  account.py  alert_latch.py  bill_statement.py  budget.py  category.py  goal.py  household.py  import_batch.py  ingest_event.py  merchant_tag.py  rule.py  statement_checkpoint.py  subscription_mute.py  transaction.py  (+1 more)
server/tests/: conftest.py  test_accounts.py  test_ai_categorize.py  test_ai_coach.py  test_auth_hold_expiry.py  test_auth_refresh.py  test_bill_rules.py  test_bill_service.py  test_bills_pure.py  test_budget_service.py  test_cashflow.py  test_categories.py  test_chat.py  test_checkpoints.py  test_coach.py  test_coach_sweeps.py  test_cross_app_client.py  test_cross_app_summary.py  test_csv_parser.py  test_export.py  test_fixture_sanitization.py  test_health.py  test_household.py  test_imports.py  test_income_rules.py  test_ingest_parsers.py  test_ingest_service.py  test_insight_service.py  test_institution_mappings.py  test_ledger.py  test_ledger_balances.py  test_merchant_tags.py  test_pace.py  test_pending_match.py  test_renormalize.py  test_replay_service.py  test_rule_apply_service.py  test_rule_service.py  test_rules_pure.py  test_security.py  (+8 more)
(+200 files in other folders)
