[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magpie-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "sqlalchemy[asyncio]==2.0.51",
    "alembic==1.18.5",
    "asyncpg==0.31.0",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.2",
    "python-jose[cryptography]==3.5.0",
    "httpx==0.28.1",
    "greenlet==3.5.3",
    "slowapi==0.1.10",
    "python-multipart==0.0.32",
    "tzdata==2026.2",  # zoneinfo tz database (owner-local month boundaries, F18); slim image has none
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1",
    "ruff==0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
